# rust-bridge-template

./: Cargo.toml  README.md
executable/: Cargo.toml
executable/src/: main.rs
java_bridge/: Cargo.toml
java_bridge/java_wrapper/: RustBridge.java
java_bridge/src/: lib.rs
main_library/: Cargo.toml
main_library/src/: lib.rs
python_bridge/: Cargo.toml  pyproject.toml
python_bridge/python_wrapper/: test.py
python_bridge/src/: README.md  lib.rs
